# streamlist-file-uploader-example

./: LICENSE  Makefile  README.md  pyproject.toml
streamlit_pdf_uploader/: main.py
tests/: test_streamlit_pdf_uploader.py
